# super_nes_classic_edition_oss

./: README.md
alsa-lib-1.1.2/: series
attr-2.4.47/: series
attr-2.4.47/attr-2.4.47/po/: attr.pot
clvcon-km-6fd0ec177b321206da5bc1b288fd6d7fdf5df7ae/clvcon-km-6fd0ec177b321206da5bc1b288fd6d7fdf5df7ae/: Makefile  clvcon.c
clvcon-km-6fd0ec177b321206da5bc1b288fd6d7fdf5df7ae/clvcon-km-6fd0ec177b321206da5bc1b288fd6d7fdf5df7ae/scripts/: cdf  cinit  dump  watch_i2c
eudev-3.2/: 0003-do-not-open-dev-kmsg-for-printf.patch  series
eudev-3.2/eudev-3.2/rule_generator/: write_net_rules
ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/: CMakeLists.txt  LuaJITConfig.cmake  makeall.bat
ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/src/: ctrbuild.bat  lj_def.h  lj_tab.h  ljamalg.c
ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/src/host/: CMakeLists.txt  buildvm.c  buildvm_asm.c
ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/ext-luajit-83dda3b07286174de43ee5adb25e7cc5fbe308e3/vcproj/: LuaJIT-amalg.ctropt  LuaJIT-amalg.vcproj  LuaJIT-amalg.vcxproj  LuaJIT.ctropt  LuaJIT.sln  LuaJIT.vcproj  LuaJIT.vcxproj
ext-lz4-7f8a282d93b4d07119c16dd6804f2ff21ea0f697/ext-lz4-7f8a282d93b4d07119c16dd6804f2ff21ea0f697/: CMakeLists.txt  Lz4Config.cmake
ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/: .hg_archival.txt  CMakeLists.txt  SDL2Config.cmake
ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/cmake/: sdlchecks.cmake
ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/ext-sdl2-6bd764a32987c8117f4c85e319b799829eedadec/include/: SDL_config.h.cmake  SDL_config.h.in
ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/: 000-Disable-SDL2-dynamic-api.patch  series
ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/: .hg_archival.txt  .hgignore  CMakeLists.txt
ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/cmake/: sdlchecks.cmake
ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/ext-sdl2-b58e77571c5c79e3bd5ec2e68184f4003a601fd3/include/: SDL_config.h.cmake  SDL_config.h.in
ext-sdl2_mixer-d4630acfba0ba90a4eb6d5d81ceb4c87441c5da7/ext-sdl2_mixer-d4630acfba0ba90a4eb6d5d81ceb4c87441c5da7/: .hg_archival.txt  CMakeLists.txt  SDL2_mixerConfig.cmake
ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/: CMakeLists.txt  soloudConfig.cmake
ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/include/: soloud.h  soloud_audiosource.h  soloud_file.h  soloud_wav.h  soloud_wavstream.h
ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/src/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp
ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/src/backend/sdl2_static/: soloud_sdl2_static.cpp
ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/ext-soloud-98c206808773d8dbcf5e063bd9044db262699914/src/core/: soloud_audiosource.cpp  soloud_core_getters.cpp  soloud_file.cpp
glibc-2.23/: series
initramfs-busybox-1.25.1/: series
initramfs-cryptsetup-1.7.2/: series
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/: Makefile.in  aclocal.m4  config.h.in  configure
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/lib/: Makefile.in
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/man/: Makefile.in
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/po/: cryptsetup.pot  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  id.gmo  id.po  it.gmo  it.po  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  sr.gmo  sr.po  sv.gmo  sv.po  uk.gmo  uk.po  vi.gmo  vi.po  zh_CN.gmo  zh_CN.po
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/python/: Makefile.in
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/src/: Makefile.in
initramfs-cryptsetup-1.7.2/cryptsetup-1.7.2/tests/: Makefile.in
initramfs-lvm2-2.02.166/LVM2.2.02.166/: VERSION  VERSION_DM
initramfs-popt-1.16/: series
initramfs-util-linux-2.28.2/util-linux-2.28.2/: ChangeLog  configure
initramfs-util-linux-2.28.2/util-linux-2.28.2/po/: cs.po  da.po  es.gmo  eu.po  fi.po  gl.gmo  gl.po  hu.po  id.gmo  id.po  ja.gmo  ja.po  nl.gmo  pl.gmo  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  sv.po  uk.gmo  uk.po  vi.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo
keyutils-1.5.9/: series
keyutils-1.5.9/keyutils-1.5.9/: .gitignore  Makefile  SUBMITTING_PATCHES  key.dns_resolver.c  keyctl.c  keyutils.c  keyutils.spec  version.lds
keyutils-1.5.9/keyutils-1.5.9/man/: find_key_by_type_and_name.3  key.dns_resolver.8  keyctl.1  keyctl.3  keyctl_chown.3  keyctl_clear.3  keyctl_describe.3  keyctl_get_keyring_ID.3  keyctl_get_persistent.3  keyctl_get_security.3  keyctl_instantiate.3  keyctl_invalidate.3  keyctl_join_session_keyring.3  keyctl_link.3  keyctl_read.3  keyctl_revoke.3  keyctl_search.3  keyctl_session_to_parent.3  keyctl_set_reqkey_keyring.3  keyctl_set_timeout.3  keyctl_setperm.3  keyctl_update.3  keyutils.7  persistent-keyring.7  process-keyring.7  recursive_key_scan.3  request-key.8  request-key.conf.5  session-keyring.7  thread-keyring.7  user-keyring.7  user-session-keyring.7
kmod-23/: series
kmod-23/kmod-23/: Makefile.in  aclocal.m4  config.h.in  configure
libpng-1.6.27/: series
linux-e50bc29a890dc11e90db28f9e857bb8a08464c5f/linux-e50bc29a890dc11e90db28f9e857bb8a08464c5f/: .gitignore
ncurses-5.9/: series
r16-uboot-371a64b6922f4b4a63be022768e251d0c1a6fa87/r16-uboot-371a64b6922f4b4a63be022768e251d0c1a6fa87/: .gitignore  boards.cfg  build.sh  filenametags
r16-uboot-99c8444be7ac661b24c684d6615caf14dd9a1178/r16-uboot-99c8444be7ac661b24c684d6615caf14dd9a1178/: .gitignore  Makefile
test-stress-ng-0.06.16/stress-ng-0.06.16/: stress-socket.c
util-linux-2.28.2/: series
(+999 files in other folders)
